# battleship

./: AUTHORS  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  battleship.desktop  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
icons/: battleship.xpm
po/: Makefile  Makefile.in  POTFILES  POTFILES.in  de.po
src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.c~  icons.c  icons.c~  main.c  main.c~  misc.c  misc.c~  window.c  window.c~
